# pydol

./: .readthedocs.yaml  MANIFEST.in  Software requerements.txt  main.spec  readme.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/: pip.txt  requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst  installation.rst  pydol.photometry.rst  pydol.pipeline.rst  pydol.rst
gui/: main.py  main_claude.py
hpc/: fetch_crds.py  jwst_comp.py  jwst_crowd.py  jwst_photometry.py  jwst_pipeline.py
notebooks/: Bubble_photometry.ipynb  Example.ipynb  HST_ACS_Analysis.ipynb  JWST_Bubbles.ipynb  JWST_NIRCAM_Analaysis_main.ipynb  JWST_Pipeline_F115W.ipynb  JWST_TRGB_v2.ipynb  JWST_Workshop_GH2024.ipynb  M51_SG.ipynb  M51_TRGB.ipynb  Massive Stars_obs.ipynb  NGC628_SFH-backup.ipynb  NGC628_SFH.ipynb  NGC_628_JWST_NIRCAM.ipynb  NIRCAM_Completeness.ipynb  Phot_combine.ipynb  Star_Formation_History.ipynb  bayestar_N_mags.ipynb  hst_photometry.ipynb  pydol.ipynb  simulated_CMDs.ipynb
params/: nircam_dolphot_f115w.param  nircam_dolphot_f150w.param  nircam_dolphot_f200w.param
pydol.egg-info/: SOURCES.txt  top_level.txt
pydol/photometry/params/: nircam_dolphot_f115w.param
pydol/pipeline/: jwst.py
scripts/: to_table.py
src/jphot/: __init__.py  core.py  data.py  dolphot.py
src/pydol/: catalog.py  core.py  dolphot.py  utils.py
src/pydol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pydol/bayestar/: __init__.py  core.py  (+1 more)
tests/: test.py  test_cmdtools.py  test_gen_CMD  test_imports.py  test_pipeline.py
(+33 files in other folders)
