[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.10
install_requires =
    numpy
    scipy
    matplotlib
    astroquery
    seaborn
    asdf_astropy
    shapely

[options.extras_require]
jwst =
    crds
    jwst
hst =
    wfc3tools
    acstools
    stwcs
    drizzlepac
    asdf
    stcal
    photutils

